@@ -56,6 +56,7 @@ package org.apache.tools.ant.listener;
 import org.apache.tools.ant.BuildEvent;
 import org.apache.tools.ant.DefaultLogger;
 import org.apache.tools.ant.Project;
+import org.apache.tools.ant.util.DateUtils;
 import org.apache.tools.ant.util.StringUtils;
 import org.apache.tools.mail.MailMessage;
 
@@ -217,6 +218,7 @@ public class MailLogger extends DefaultLogger {
     private void sendMail(String mailhost, String from, String toList,
                           String subject, String message) throws IOException {
         MailMessage mailMessage = new MailMessage(mailhost);
+        mailMessage.setHeader("Date", DateUtils.getDateForHeader());
 
         mailMessage.from(from);
 
